Major Update -Simplified Zoom call (better performance) -Fixed GetTool bug (which could return a broken tool for the player, even if he have a working one) -FixedCast bug -Added possibility to interact with a specific collider of a WorldObject -Added Line of Sight Check -Added Stuck Prevention (from dTormentedSoul) -Added ESP for current gathering options + players -Added Position Pathing Request (for a point instead of unit, etc.) -Added not super cool fix for City Movement ;) -Added Banking -Added using of additional spells in combat while gathering (like Q) -Added option to gather from living mobs also (!experimental!, currently some kind of mobs are not working, like MOB_BOAR (gameName)) -Added looting of killed mobs (no silver, cause yeah..could end in a dead-end for the bot after he dies^^) -Added option to move to target cluster, when it is different from current cluster -Added siege camp treasuring option (!experimental!, the bot will store everything inside the siege camps treasure when above 30%, useful for yellow terretories - only used when inside a siege camp cluster) -Added repositioning behaviour, which will move to an known old position of an harvestableObject (from last hour) if bot can't find anything fore a specific amount of time -Added option to skip unrestricted pvp zones (for gathering inside a cluster, like hellgate spots, and travelling, like red terretories) -Added option to skip keeper packs (mobs with chest for gathering inside a cluster, and travelling - not 100% accurate) -Gatherer will now save preferences between sessions :) -An error inside a gathering method will now trigger a restart of the bot instead of just hanging on the error

--- a/Albion/Merlin/API/Game/Client.tt
+++ b/Albion/Merlin/API/Game/Client.tt
@@ -51,21 +51,12 @@ namespace Merlin.API
         {
             get
             {
-                LocalActorCameraController localActorCameraController = UnityEngine.Object.FindObjectsOfType<LocalActorCameraController>().FirstOrDefault();
-                if (localActorCameraController == null)
-                {
-                    return 0f;
-                }
-                return localActorCameraController.Outside.Far.Distance;
+                return <#= internalClientType.Name #>.<#= internalClient_getInstance.Name #>().<#= internalClient_getLocalPlayerCharacterView.Name #>() != null ? <#= internalClientType.Name #>.<#= internalClient_getInstance.Name #>().<#= internalClient_getLocalPlayerCharacterView.Name #>().GetComponent<LocalActorCameraController>().Outside.Far.Distance : 0f;
             }
             set
             {
-                LocalActorCameraController localActorCameraController = UnityEngine.Object.FindObjectsOfType<LocalActorCameraController>().FirstOrDefault();
-                if (localActorCameraController == null)
-                {
-                    return;
-                }
-                localActorCameraController.Outside.Far.Distance = value;
+                if (<#= internalClientType.Name #>.<#= internalClient_getInstance.Name #>().<#= internalClient_getLocalPlayerCharacterView.Name #>() != null)
+                    <#= internalClientType.Name #>.<#= internalClient_getInstance.Name #>().<#= internalClient_getLocalPlayerCharacterView.Name #>().GetComponent<LocalActorCameraController>().Outside.Far.Distance = value;
             }
         }
 
