--- a/Albion/Merlin/API/Game/Landscape.tt
+++ b/Albion/Merlin/API/Game/Landscape.tt
@@ -1,8 +1,5 @@
 ﻿<#@ include file="..\Global.ttinclude" #>
-using System;
 using System.Collections.Generic;
-using System.Linq;
-using System.Reflection;
 
 using UnityEngine;
 
@@ -52,6 +49,20 @@ namespace Merlin.API
 		{
 			return _landscape.d(position);
 		}
+
+		public List<aea> GetUnrestrictedPvPZones()
+		{
+			return _landscape.f().e;
+		}
+
+        public bool IsInAnyUnrestrictedPvPZone(Vector3 pos)
+        {
+            foreach (var pvpZone in GetUnrestrictedPvPZones())
+                if (Mathf.Pow(pos.x - pvpZone.k(), 2) + Mathf.Pow(pos.z - pvpZone.l(), 2) < Mathf.Pow(pvpZone.m(), 2))
+                    return true;
+
+            return false;
+        }
 
 		#endregion
 	}
