--- a/Albion/Merlin/Extensions/Views/HarvestableObjectView.tt
+++ b/Albion/Merlin/Extensions/Views/HarvestableObjectView.tt
@@ -64,7 +64,7 @@ namespace Merlin
 
 		public static <#= internalitemType.Name #> GetTool(this HarvestableObjectView instance, LocalPlayerCharacterView player)
 		{
-			return instance.HarvestableObject.az(player.LocalPlayerCharacter, true);
+			return instance.HarvestableObject.az(player.LocalPlayerCharacter, false);
 		}
 
 		public static bool RequiresTool(this HarvestableObjectView instance)
